@@ -1,5 +1,9 @@
 Version 3.1.3, March 2, 2020
 
+@SuppressWarnings("initialization") suppresses only warnings whose key
+contains "initialization".  Previously, it suppressed all warnings issued
+by the Nullness Checker or the Initialization Checker.
+
 ---------------------------------------------------------------------------
 
 Version 3.1.1, February 3, 2020
